Update platform to Eclipse 2019-09